[gd_scene load_steps=15 format=3 uid="uid://cp0q2snacikok"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_e06wh"]
[ext_resource type="Script" path="res://scripts/player_hand.gd" id="2_6g0fi"]
[ext_resource type="PackedScene" uid="uid://cdpsuo4ubwrb4" path="res://assets/models/bomb.glb" id="2_cmxb5"]
[ext_resource type="AudioStream" uid="uid://bm7vas4j6606x" path="res://assets/audio/click_in.wav" id="2_ovt5n"]
[ext_resource type="AudioStream" uid="uid://c8tcu5a3q7rnd" path="res://assets/audio/click_out.wav" id="3_5xlte"]
[ext_resource type="PackedScene" uid="uid://d1yhtgplfxot1" path="res://classes/items/bomb.tscn" id="3_7lxoh"]
[ext_resource type="AudioStream" uid="uid://dw5xmxrkh460m" path="res://assets/audio/jump.wav" id="4_qctkc"]
[ext_resource type="PackedScene" uid="uid://kkxhh23j4g0l" path="res://classes/items/sword.tscn" id="5_ntabj"]
[ext_resource type="AudioStream" uid="uid://bvow8nunp2ose" path="res://assets/audio/land.wav" id="5_uyeiu"]
[ext_resource type="AudioStream" uid="uid://csw07gy13fbvo" path="res://assets/audio/splash_in.mp3" id="6_1md7h"]
[ext_resource type="PackedScene" uid="uid://dq5cnqdqoivsh" path="res://classes/items/wand.tscn" id="6_t8igu"]
[ext_resource type="AudioStream" uid="uid://cebh4bypevcop" path="res://assets/audio/splash_out.wav" id="7_ot1x2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_xrcat"]
friction = 0.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u16lm"]

[node name="player" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 128
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
physics_material_override = SubResource("PhysicsMaterial_xrcat")
contact_monitor = true
max_contacts_reported = 8
linear_damp_mode = 1
script = ExtResource("1_e06wh")

[node name="collider" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_u16lm")

[node name="camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
current = true
near = 0.125

[node name="hand" type="Node3D" parent="camera"]
script = ExtResource("2_6g0fi")
pf_bomb = ExtResource("3_7lxoh")

[node name="bomb" parent="camera/hand" instance=ExtResource("2_cmxb5")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.4, -0.35, -0.55)

[node name="Sphere" parent="camera/hand/bomb" index="0"]
cast_shadow = 0

[node name="Cylinder" parent="camera/hand/bomb" index="1"]
cast_shadow = 0

[node name="seam_fx" parent="camera/hand/bomb" index="2"]
visible = false
cast_shadow = 0

[node name="sword" parent="camera/hand" instance=ExtResource("5_ntabj")]
transform = Transform3D(0.5, -0.866025, 0, 0.866025, 0.5, 0, 0, 0, 1, 0.15, -0.35, -0.25)

[node name="wand" parent="camera/hand" instance=ExtResource("6_t8igu")]
transform = Transform3D(0.5, 0, 0, 0, 0.12941, -0.482963, 0, 0.482963, 0.12941, 0.3, -0.3, -0.4)
visible = false

[node name="sfx_click_in" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ovt5n")

[node name="sfx_click_out" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5xlte")

[node name="sfx_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qctkc")
volume_db = -10.0

[node name="sfx_land" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_uyeiu")
volume_db = -15.0

[node name="sfx_splash_in" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1md7h")
volume_db = -15.0

[node name="sfx_splash_out" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ot1x2")
volume_db = -20.0

[editable path="camera/hand/bomb"]
